Add getProducts api
