# Backend/swagger.yml
@@ -16,7 +16,7 @@ paths:
   /lists:
     get:
       description: |
-        Returns all lists of user
+        Returns all lists where owner is this user
       operationId: findLists
       parameters:
         - name: limit
@@ -60,25 +60,6 @@ paths:
             $ref: '#/definitions/Error'
 
   /lists/{id}:
-    get:
-      description: Returns a list based on a ID
-      operationId: find list by id
-      parameters:
-        - name: id
-          in: path
-          description: ID of list to fetch
-          required: true
-          type: integer
-          format: int64
-      responses:
-        200:
-          description: list response
-          schema:
-            $ref: '#/definitions/List'
-        default:
-          description: unexpected error
-          schema:
-            $ref: '#/definitions/Error'
     delete:
       description: deletes a single list based on the ID supplied
       operationId: deleteList
@@ -146,6 +127,23 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 
+  /products:
+    get:
+      description: Returns all products
+      operationId: getProducts
+
+      responses:
+        200:
+          description: imported products
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Product'
+        default:
+          description: unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
 
   /user/register:
     post:
@@ -175,11 +173,14 @@ definitions:
       - $ref: '#/definitions/Product'
       - required:
         - _id
+        - owner
         - products
         properties:
           _id:
             type: integer
             format: int64
+          owner:
+            type: string
           products:
             type: array
             items:
@@ -189,9 +190,12 @@ definitions:
     allOf:
       - required:
         - name
+        - owner
         - products
         properties:
           name:
+            type: string
+          owner:
             type: string
           products:
             type: array
